--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "prakhar8bit",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://prakharshukla.in/",
   "dependencies": {
     "aos": "^2.3.4",
     "nes.css": "^2.2.0",
@@ -15,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && cp CNAME ./build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
